// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > Button should render when variant is negative > NegativeButton 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.75rem;
  border: 1px solid transparent;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  font-family: Mulish;
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
}

.c1 {
  background: var(--negative-100, #ef4444);
  border-color: var(--negative-100, #ef4444);
  color: var(--system-50, #fff);
}

.c1:hover {
  background: var(--negative-200, #7f1d1d);
  border-color: var(--negative-200, #7f1d1d);
}

.c1:active {
  border: 2px solid var(--negative-200, #7f1d1d);
  background: var(--negative-50, #f87171);
}

.c1:disabled {
  background: var(--neutral-50, #f9fafb);
  border-color: var(--neutral-50, #f9fafb);
  color: var(--neutral-200, #9ca3af);
}

<button
    class="c0 c1"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button component > Button should render when variant is positive > PositiveButton 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.75rem;
  border: 1px solid transparent;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  font-family: Mulish;
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
}

.c1 {
  background: var(--positive-100, #059669);
  border-color: var(--positive-100, #059669);
  color: var(--system-50, #fff);
}

.c1:hover {
  background: var(--positive-200, #065f46);
  border-color: var(--positive-200, #065f46);
}

.c1:active {
  border: 2px solid var(--positive-200, #065f46);
  background: var(--positive-50, #34d399);
  color: var(--positive-200, #065f46);
}

.c1:disabled {
  background: var(--neutral-50, #f9fafb);
  border-color: var(--neutral-50, #f9fafb);
  color: var(--neutral-200, #9ca3af);
}

<button
    class="c0 c1"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button component > Button should render when variant is primary > PrimaryButton 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.75rem;
  border: 1px solid transparent;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  font-family: Mulish;
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
}

.c1 {
  background: var(--primary-200, #177ba6);
  border-color: var(--primary-200, #177ba6);
  color: var(--system-50, #fff);
}

.c1:hover {
  font-weight: 700;
  background: var(--primary-300, #115873);
  border-color: var(--primary-300, #115873);
  color: var(--system-50, #fff);
}

.c1:active {
  border: 2px solid var(--primary-200, #177ba6);
  background: var(--primary-50, #2aace2);
  color: var(--system-50, #fff);
}

.c1:disabled {
  background: var(--neutral-50, #f9fafb);
  border-color: var(--neutral-50, #f9fafb);
  color: var(--neutral-50, #9ca3af);
}

<button
    class="c0 c1"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button component > Button should render when variant is secondary > SecondaryButton 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.75rem;
  border: 1px solid transparent;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  font-family: Mulish;
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
  letter-spacing: 0.00119rem;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
}

.c1 {
  border: 1px solid var(--neutral-50, #9ca3af);
  background: var(--system-50, #fff);
  color: var(--primary-200, #177ba6);
}

.c1:hover {
  border: 1px solid var(--neutral-100, #1c99ce);
  color: var(--primary-200, #177ba6);
}

.c1:active {
  border: 2px solid var(--primary-200, #177ba6);
}

.c1:disabled {
  background: var(--neutral-50, #f9fafb);
  border-color: var(--neutral-50, #f9fafb);
  color: var(--neutral-200, #9ca3af);
}

<button
    class="c0 c1"
  >
    Click Me
  </button>
</DocumentFragment>
`;
